--- a/app/views/admin/edituser.ejs
+++ b/app/views/admin/edituser.ejs
@@ -31,14 +31,26 @@
 
 <body>
 
-<% for(let i = 0; i < computer.length; i++){ %>
-<p> <%= computer[i].type %> </p>
-<form action="/attribution/<%- computer[i]._id %> " method="post">
-    <input name="gpu" type="text" class="form-control" placeholder="Username">
-    <button action="submit" > Update </button>
-</form>
+    <div class="container">
+  
+        <form action="/postedit/utilisateur/<%= user._id %>" method="post">
+            <div class="form-group">
+                <label for="type"> Nom </label>
+                <input type="text" name="name" class="form-control" value=" <%= user.name %>">
+            </div>
 
-<% } %>
+            <div class="form-group">
+                <label for="gpu"> Âge</label>
+                <input type="text" name="age" class="form-control"  value=" <%= user.age %>">
+            </div>
+
+           
+            <button type="submit" class=" btn btn-success"> Mettre à jour</button>
+            <button type "submit" formaction="/delete/utilisateur/<%= user._id %>" class="btn btn-danger"> Delete </button>
+        </form>
+    </div>
+
+
 
 
 
