--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -263,6 +263,11 @@ footer button {
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   margin-top: 30px;
   background-color: #fff;
+  
+}
+
+.cardz a {
+  color: #000;
 }
 
 .cardz:hover {
