--- a/app/views/admin/users.ejs
+++ b/app/views/admin/users.ejs
@@ -139,6 +139,7 @@
                 <a href="#oModal">
                     <button class="addbtn btn-lg"> AJOUTER </button>
                 </a>
+                <h3> Liste des adhérants de l'association</h3>
                 <div class="card">
                     <div class="table-responsive">
                         <table class="table table-striped">
