--- a/app/views/admin/editcomputer.ejs
+++ b/app/views/admin/editcomputer.ejs
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
@@ -21,7 +20,7 @@
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
 
-    <link href="css/dashboard.css" rel="stylesheet">
+    <link href="/css/dashboard.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/cdb0e95dfa.js"></script>
 
 
@@ -31,81 +30,142 @@
 
 <body>
 
-    <div class="container">
-  
-        <form action="/postedit/<%= computer._id %>" method="post">
-            <div class="form-group">
-                <label for="type"> Type de l'ordinateur </label>
-                <input type="text" name="type" class="form-control" value=" <%= computer.type %>">
-            </div>
 
-            <div class="form-group">
-                <label for="gpu"> gpu</label>
-                <input type="text" name="gpu" class="form-control"  value=" <%= computer.gpu %>">
-            </div>
 
-            <div class="form-group">
-                <label for="cpu"> cpu </label>
-                <input type="text" name="cpu" class="form-control"  value=" <%= computer.cpu %>">
-            </div>
 
-            <div class="form-group">
-                <label for="memory"> memory </label>
-                <input type="text" name="memory" class="form-control"  value=" <%= computer.memory %>">
-            </div>
 
-            <div class="form-group">
-                <label for="cm"> cm</label>
-                <input type="text" name="cm" class="form-control"  value=" <%= computer.cm %>">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Project name</a>
             </div>
-            <div class="form-group">
-            <% users.forEach(function(user){ %>
-        
-                <label>
-                        <%= user.name %>
-                    <input type="radio" name="usedby[]" value="<%= user._id %>"
-                     <% if( computer.usedby.indexOf(user._id) != -1 ) { %>
-                        checked 
-                     <% } %>
-                    >
-
-              
-                </label>
-            <% }); %>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">Dashboard</a>
+                    </li>
+                    <li>
+                        <a href="#">Settings</a>
+                    </li>
+                    <li>
+                        <a href="#">Profile</a>
+                    </li>
+                    <li>
+                        <a href="#">Help</a>
+                    </li>
+                </ul>
+                <form class="navbar-form navbar-right">
+                    <input type="text" class="form-control" placeholder="Search...">
+                </form>
+            </div>
         </div>
-           
-            <button type="submit" class=" btn btn-success"> Mettre à jour</button>
-            <button type "submit" formaction="/delete/computer/<%= computer._id %>" class="btn btn-danger"> Delete </button>
-            <button type="submit" formaction="/inactive/<%= computer._id%>"  class="btn btn-warning"> Rendre inactif </button>            
-        </form>
-    </div>
+    </nav>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-3 col-md-2 sidebar">
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a href="/">
+                            <i class="fa fa-home" aria-hidden="true"> </i>
+                            <span> Accueil </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/liste-ordinateurs">
+                            <i class="fa  fa-desktop" aria-hidden="true"></i>
+                            <span> Ordinateurs</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/liste-adherants">
+                            <i class="fa  fa-users" aria-hidden="true"></i>
+                            <span> Adhérants</span>
+                        </a>
+                    </li>
+             
+                </ul>
 
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                
+                    <ol class="breadcrumb">
+                        <li> <a href="/liste-ordinateurs">Ordinateurs</a></li>
+                        <li class="active"> Editer un ordinateur</li>
+                    </ol>
 
-    <!-- <% for(let i = 0; i < computer.length; i++){ %>
-<p> <%= computer[i].type %> </p>
-<form action="/attribution/<%- computer[i]._id %> " method="post">
-    <input name="firstname" type="text" class="form-control" placeholder="Username">
-    <button action="submit" > Update </button>
-</form>
+                    <div class="container(fluid">
+                            
+                                  <form action="/postedit/<%= computer._id %>" method="post">
+                                      <div class="form-group">
+                                          <label for="type"> Type de l'ordinateur </label>
+                                          <input type="text" name="type" class="form-control" value=" <%= computer.type %>">
+                                      </div>
+                          
+                                      <div class="form-group">
+                                          <label for="gpu"> gpu</label>
+                                          <input type="text" name="gpu" class="form-control"  value=" <%= computer.gpu %>">
+                                      </div>
+                          
+                                      <div class="form-group">
+                                          <label for="cpu"> cpu </label>
+                                          <input type="text" name="cpu" class="form-control"  value=" <%= computer.cpu %>">
+                                      </div>
+                          
+                                      <div class="form-group">
+                                          <label for="memory"> memory </label>
+                                          <input type="text" name="memory" class="form-control"  value=" <%= computer.memory %>">
+                                      </div>
+                          
+                                      <div class="form-group">
+                                          <label for="cm"> cm</label>
+                                          <input type="text" name="cm" class="form-control"  value=" <%= computer.cm %>">
+                                      </div>
+                                      <div class="form-group">
+                                      <% users.forEach(function(user){ %>
+                                  
+                                          <label>
+                                                  <%= user.name %>
+                                              <input type="radio" name="usedby[]" value="<%= user._id %>"
+                                               <% if( computer.usedby.indexOf(user._id) != -1 ) { %>
+                                                  checked 
+                                               <% } %>
+                                              >
+                          
+                                        
+                                          </label>
+                                      <% }); %>
+                                  </div>
+                                     
+                                      <button type="submit" style="margin-left: 10px" class=" btn btn-success pull-right"> Mettre à jour</button>
+                                      <button type "submit" formaction="/delete/computer/<%= computer._id %>" class="btn btn-danger pull-right"> Delete </button>
+                                      <button type="submit" formaction="/inactive/<%= computer._id%>"  class="btn btn-info"> Rendre inactif </button>            
+                                  </form>
+                              </div>
+                          
+                          
+                    
+                  </div>
+              </div>
+                          
 
-<% } %> -->
-
-
-
-
-
-
-    <!-- Bootstrap core JavaScript
+        <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+        <script src="../../dist/js/bootstrap.min.js"></script>
+        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+        <script src="../../assets/js/vendor/holder.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 
 </html>
