--- a/app/views/admin/edituser.ejs
+++ b/app/views/admin/edituser.ejs
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
@@ -21,7 +20,7 @@
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
 
-    <link href="css/dashboard.css" rel="stylesheet">
+    <link href="/css/dashboard.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/cdb0e95dfa.js"></script>
 
 
@@ -31,42 +30,111 @@
 
 <body>
 
-    <div class="container">
-  
-        <form action="/postedit/utilisateur/<%= user._id %>" method="post">
-            <div class="form-group">
-                <label for="type"> Nom </label>
-                <input type="text" name="name" class="form-control" value=" <%= user.name %>">
+
+
+
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Project name</a>
             </div>
-
-            <div class="form-group">
-                <label for="gpu"> Âge</label>
-                <input type="text" name="age" class="form-control"  value=" <%= user.age %>">
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">Dashboard</a>
+                    </li>
+                    <li>
+                        <a href="#">Settings</a>
+                    </li>
+                    <li>
+                        <a href="#">Profile</a>
+                    </li>
+                    <li>
+                        <a href="#">Help</a>
+                    </li>
+                </ul>
+                <form class="navbar-form navbar-right">
+                    <input type="text" class="form-control" placeholder="Search...">
+                </form>
             </div>
+        </div>
+    </nav>
 
-           
-            <button type="submit" class=" btn btn-success"> Mettre à jour</button>
-            <button type "submit" formaction="/delete/utilisateur/<%= user._id %>" class="btn btn-danger"> Delete </button>
-        </form>
-    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-3 col-md-2 sidebar">
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a href="/">
+                            <i class="fa fa-home" aria-hidden="true"> </i>
+                            <span> Accueil </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/liste-ordinateurs">
+                            <i class="fa  fa-desktop" aria-hidden="true"></i>
+                            <span> Ordinateurs</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/liste-adherants">
+                            <i class="fa  fa-users" aria-hidden="true"></i>
+                            <span> Adhérants</span>
+                        </a>
+                    </li>
+             
+                </ul>
 
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                
+                    <ol class="breadcrumb">
+                        <li> <a href="/liste-adherants">Adhérants</a></li>
+                        <li class="active"> Editer un adhérant</li>
+                    </ol>
 
+                    <div class="container-fluid">
+                            
+                                  <form action="/postedit/utilisateur/<%= user._id %>" method="post">
+                                      <div class="form-group">
+                                          <label for="type"> Nom </label>
+                                          <input type="text" name="name" class="form-control" value=" <%= user.name %>">
+                                      </div>
+                          
+                                      <div class="form-group">
+                                          <label for="gpu"> Âge</label>
+                                          <input type="text" name="age" class="form-control"  value=" <%= user.age %>">
+                                      </div>
+                          
+                                     
+                                      <button style="margin-left: 10px" type="submit" class="btn btn-success pull-right"> Mettre à jour</button>
+                                      <button type "submit" formaction="/delete/utilisateur/<%= user._id %>" class="btn btn-danger pull-right"> Delete </button>
+                                  </form>
+                              </div>
+                          
+                    
+                  </div>
+              </div>
+                          
 
-
-
-
-
-
-    <!-- Bootstrap core JavaScript
+        <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+        <script src="../../dist/js/bootstrap.min.js"></script>
+        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+        <script src="../../assets/js/vendor/holder.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 
 </html>
