--- a/app/views/admin/editcomputer.ejs
+++ b/app/views/admin/editcomputer.ejs
@@ -146,7 +146,7 @@
                                      
                                       <button type="submit" style="margin-left: 10px" class=" btn btn-success pull-right"> Mettre à jour</button>
                                       <button type "submit" formaction="/delete/computer/<%= computer._id %>" class="btn btn-danger pull-right"> Delete </button>
-                                      <button type="submit" formaction="/inactive/<%= computer._id%>"  class="btn btn-info"> Rendre inactif </button>            
+                                      <button type="submit" formaction="/inactive/<%= computer._id%>"  class="btn btn-info"> Rendere inactif </button>            
                                   </form>
                               </div>
                           
