--- a/app/views/admin/computers.ejs
+++ b/app/views/admin/computers.ejs
@@ -12,28 +12,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
 
-
-    <title>Cyber Café - Adhérants</title>
+    <title>Cyber Café - Ordinateurs</title>
 
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-
     <link href="css/dashboard.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/cdb0e95dfa.js"></script>
-
-
-
-
 </head>
 
 <body>
-
-
-
-
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
@@ -151,100 +138,44 @@
                                     </div>
                                 </div>
 
-
-
-
-
-                        </section>
-                        <footer class="cf">
-
-                            <button class="pull-right add" action="submit">AJOUTER </button>
-                            <button class="pull-right cancel" action="#">ANNULER </button>
-                            </form>
-                        </footer>
-                    </div>
-                </div>
-
-                <h2 class="sub-header">
-                    <i class="fa  fa-desktop" aria-hidden="true"></i> Ordinateurs</h2>
-                <a href="#oModal">
-                    <button class="addbtn btn-lg"> AJOUTER </button>
-                </a>
-                <div class="row">
-
-                    <div class="col-md-12">
-                        <div class="col-md-9">
-
-                            <h3>
-                                <i class="fa  fa-power-off" style="pull-right" aria-hidden="true"></i> Occupé</h3>
-                            <% for(var i = 0; i < computers.length; i++){ %>
-                                <%if (computers[i].usedby.length > 0 ) { %>
-
-
-                                    <a href="edit/ordinateur/<%- computers[i]._id %>">
-                                        <div class="cardz">
-                                            <div class="row">
-
-                                                <div class="col-md-12">
-                                                    <div class="container">
-                                                        <h4>Type :
-                                                            <%= computers[i].type %>
-                                                        </h4>
-                                                        <h5> Utilisé par :
-                                                            <%= computers[i].usedby %>
-                                                        </h5>
-                                                        <p>Carte graphique :
-                                                            <%= computers[i].gpu %>
-                                                        </p>
-                                                        <p> Processeur :
-                                                            <%= computers[i].cpu %>
-                                                        </p>
-                                                        <p>Carte mère :
-                                                            <%= computers[i].cm %>
-                                                        </p>
-                                                        <p> Mémoire :
-                                                            <%= computers[i].memory %>
-                                                        </p>
-
-
-
-
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                    </a>
-
-
-                                    </div>
-
-                                    <% } %>
-                                        <% } %>
+                            </section>
+                            <footer class="cf">
+    
+                                <button class="pull-right add" action="submit">AJOUTER </button>
+                                 <a href="#fermer" class="btn droite btn-fill btn-success cancel" title="Fermer la fenêtre"> ANNzULER </a>
+                                </form>
+                            </footer>
                         </div>
-
-                        <div class="col-md-3">
-
-                            <h3>
-                                <i class="fa  fa-power-off" style="pull-right; color: #DFDFDF" aria-hidden="true"></i> Non utilisé</h3>
-
-                            <div class="row">
-
-
+                    </div>
+    
+                    <h2 class="sub-header">
+                        <i class="fa  fa-desktop" aria-hidden="true"></i> Ordinateurs</h2>
+                    <a href="#oModal">
+                        <button class="addbtn btn-lg"> AJOUTER </button>
+                    </a>
+                    <div class="row">
+    
+                        <div class="col-md-12">
+                            <div class="col-md-9">
+    
+                                <h3>
+                                    <i class="fa  fa-power-off" style="pull-right" aria-hidden="true"></i> Occupé</h3>
                                 <% for(var i = 0; i < computers.length; i++){ %>
-
-                                    <%if ( computers[i].usedby <= 0 ) { %>
-
+                                    <%if (computers[i].usedby.length > 0 ) { %>
+    
+    
                                         <a href="edit/ordinateur/<%- computers[i]._id %>">
                                             <div class="cardz">
                                                 <div class="row">
-
+    
                                                     <div class="col-md-12">
                                                         <div class="container">
-
-                                                                <p>Type :
-                                                                        <%= computers[i].type %>
-                                                                    </p>
-
+                                                            <h4>Type :
+                                                                <%= computers[i].type %>
+                                                            </h4>
+                                                            <h5> Utilisé par :
+                                                                <%= computers[i].usedby %>
+                                                            </h5>
                                                             <p>Carte graphique :
                                                                 <%= computers[i].gpu %>
                                                             </p>
@@ -257,49 +188,58 @@
                                                             <p> Mémoire :
                                                                 <%= computers[i].memory %>
                                                             </p>
-
-
-
-
+    
+    
+    
+    
+    
                                                         </div>
                                                     </div>
                                                 </div>
-                                        </a>
-
-
+                                            </a>
                                         </div>
-                                        <% } %>
-                                            <% } %>
+                                    <% } %>
+                                    <% } %>
+                                </div>
+                                
+                                
+                            <div class="col-md-3">
+                                <h3><i class="fa  fa-power-off" style="pull-right; color: #DFDFDF" aria-hidden="true"></i> Non utilisé</h3>
+                                <div class="row">
+                                    <% for(var i = 0; i < computers.length; i++){ %>
+    
+                                        <%if ( computers[i].usedby <= 0 ) { %>
+    
+                                            <a href="edit/ordinateur/<%- computers[i]._id %>">
+                                                <div class="cardz">
+                                                    <div class="row">
+    
+                                                        <div class="col-md-12">
+                                                            <div class="container">
+                                                                <p>Type :%= computers[i].type %> </p>
+                                                                <p>Carte graphique :<%= computers[i].gpu %></p>
+                                                                <p> Processeur :<%= computers[i].cpu %> </p>
+                                                                <p>Carte mère :<%= computers[i].cm %></p>
+                                                                <p> Mémoire :<%= computers[i].memory %></p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                            </a>
+    
+    
+                                </div>
+                                         <% } %>
+                                    <% } %>
                             </div>
-                        </div>
-
-
                     </div>
-
-
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-    </div>
-
-    </div>
-
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-</body>
+    
+    </body>
+    
+    </html>
 
-</html>
+
+
+
+
