--- a/app/views/admin/editcomputer.ejs
+++ b/app/views/admin/editcomputer.ejs
@@ -12,27 +12,16 @@
         crossorigin="anonymous">
 
 
-    <title>Cyber Café - Adhérants</title>
+    <title>Cyber Café - Editer un ordinateur</title>
 
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-
     <link href="/css/dashboard.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/cdb0e95dfa.js"></script>
-
-
-
-
+    
 </head>
 
 <body>
-
-
-
-
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
@@ -156,16 +145,6 @@
               </div>
                           
 
-        <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-        <script src="../../dist/js/bootstrap.min.js"></script>
-        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-        <script src="../../assets/js/vendor/holder.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 
 </html>
