--- a/app/views/admin/users.ejs
+++ b/app/views/admin/users.ejs
@@ -16,24 +16,13 @@
     <title>Cyber Café - Adhérants</title>
 
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-
     <link href="css/dashboard.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/cdb0e95dfa.js"></script>
-
-
-
 
 </head>
 
 <body>
-
-
-
-
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
@@ -128,7 +117,7 @@
                         <footer class="cf">
 
                             <button class="pull-right add" action="submit">AJOUTER </button>
-                            <button class="pull-right cancel">ANNULER </button>
+                             <a href="#fermer" class="btn droite btn-fill btn-success cancel" title="Fermer la fenêtre"> ANNULER </a>
                             </form>
                         </footer>
                     </div>
@@ -182,16 +171,9 @@
             </div>
         </div>
 
-        <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
+  
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-        <script src="../../dist/js/bootstrap.min.js"></script>
-        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-        <script src="../../assets/js/vendor/holder.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
 </body>
 
 </html>
