--- a/app/views/admin/computers.ejs
+++ b/app/views/admin/computers.ejs
@@ -216,7 +216,7 @@
     
                                                         <div class="col-md-12">
                                                             <div class="container">
-                                                                <p>Type :%= computers[i].type %> </p>
+                                                                <p>Type :<%= computers[i].type %> </p>
                                                                 <p>Carte graphique :<%= computers[i].gpu %></p>
                                                                 <p> Processeur :<%= computers[i].cpu %> </p>
                                                                 <p>Carte mère :<%= computers[i].cm %></p>
