--- a/app/views/admin/users.ejs
+++ b/app/views/admin/users.ejs
@@ -24,7 +24,7 @@
 
 <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -34,26 +34,36 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#">Cyber Café </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#">Dashboard</a>
-                    </li>
-                    <li>
-                        <a href="#">Settings</a>
-                    </li>
-                    <li>
-                        <a href="#">Profile</a>
-                    </li>
-                    <li>
-                        <a href="#">Help</a>
-                    </li>
+                        <li>
+                                <a href="/">
+                                    <i class="fa fa-home" aria-hidden="true"> </i>
+                                    <span> Accueil </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/liste-ordinateurs">
+                                    <i class="fa  fa-desktop" aria-hidden="true"></i>
+                                    <span> Ordinateurs</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/liste-adherants">
+                                    <i class="fa  fa-users" aria-hidden="true"></i>
+                                    <span> Adherants</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa  fa-cogs" aria-hidden="true"></i>
+                                    <span> Paramètres</span>
+                                </a>
+                            </li>
                 </ul>
-                <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control" placeholder="Search...">
-                </form>
+                
             </div>
         </div>
     </nav>
